# conway

./: README.md
c_conway/: Makefile  board.c  board.h  main  main.c  utils.c  utils.h
nodejs_conway/: package.json
reactjs_conway/: package-lock.json  package.json
rust_conway/: Cargo.toml
rust_conway/src/: main.rs  matrix.rs
