[package]
name = "rust_conway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3.2"
termion = "2.0.1"

#rayon = "1.7.0"
#term_size = "0.3.2"
crossterm = "0.26.1"
#unicode-segmentation = "0.1.2"
